# Muse-meta

./: .dockerignore  .env.example  .gitignore  .meta_ai_cookies.json  Dockerfile  README.md  pyproject.toml  test_client.py  test_deep.py  test_fix.py  test_fixed.py
.playwright_profile/: ChromeFeatureState  Local State
.playwright_profile/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
.playwright_profile/Default/Cache/Cache_Data/: 017cb47bd217eff2_0  021f70d3bee4460c_0  04cad9529536e244_0  0aa2baed1172829f_0  0da2a034071559ef_0  0eb6435115c9f60d_0  1253120db37f1912_0  12952f12af2d4cbd_0  12ffbb468db65bda_0  13fd5ff7d0586da2_0  141928f1f5fd9587_0  142ca3f7266a16b4_0  14792a05994560ac_0  15f2f192a46a2e1b_0  1620b3251f451370_0  1770f72d7c306724_0  1ca90198a083e30a_0  1ce04f260f4e511c_0  1d370e122aee39b5_0  1e999d5b8313c39d_0  1ec54f27b603d008_0  1f11d84b337e85b0_0  20636e713676578d_0  218fca18a711bbe9_0  21ab870ed1b13a9f_0  2332097370d485ad_0  245378393797390a_0  28276fd5dfc7f6dd_0  2892576f235a5cb6_0  2c5915a3ecf838b3_0  2d5d7a71163ce96c_0  2db7939c9f005834_0  2dcc9c919d3fb5c8_0  2e2433edd741cd66_0  2e524df6dedb5718_0  2ea38bca9e52a2ca_0  2ea457044ea2f653_0  2fe02a38910554a3_0  30e77ae09ca14dfd_0  31848e99fa543300_0  (+140 more)
.playwright_profile/Default/Code Cache/js/: 01f9b3ac7c437b86_0  0256594bb700e725_0  0aa9d23ad29472ed_0  0f24a29b93c85346_0  0f38f22de67459df_0  11e877330fc7cbb2_0  16a5283886667e25_0  16e1e8965b080541_0  1719279181f20fb5_0  (+148 more)
.playwright_profile/Default/DawnGraphiteCache/: data_1  index
.playwright_profile/Default/DawnWebGPUCache/: data_1  index
.playwright_profile/Default/Extension Rules/: LOG
.playwright_profile/Default/Extension Scripts/: LOG
.playwright_profile/Default/Extension State/: LOG  LOG.old
.playwright_profile/Default/GCM Store/: LOG
.playwright_profile/Default/GPUCache/: data_0  data_1  data_2  index
.playwright_profile/Default/Session Storage/: LOG  LOG.old
.playwright_profile/Default/Sessions/: Session_13422172819108070  Session_13422173421415186  Tabs_13422172819139295  Tabs_13422173421670916
.playwright_profile/Default/Site Characteristics Database/: LOG  LOG.old
.playwright_profile/Default/shared_proto_db/: LOG  LOG.old
.playwright_profile/GrShaderCache/: data_1  index
.playwright_profile/GraphiteDawnCache/: data_0  data_1  data_2  index
.playwright_profile/ShaderCache/: data_1  index
.playwright_profile/segmentation_platform/: ukm_db
src/muse_meta/: __init__.py  __main__.py  config.py  main.py  middleware.py  security.py
src/muse_meta/models/: __init__.py  chat.py
src/muse_meta/routers/: __init__.py  chat.py
src/muse_meta/services/: __init__.py  muse_client.py
src/muse_meta/utils/: __init__.py
tests/: __init__.py  conftest.py  test_chat_routes.py  test_config.py  test_http_security.py
tools/: _paths.py  analyze_meta_ai.py  cookie_server.py  extract_cookies.py  extract_cookies_persistent.py  extract_cookies_stealth.py  extract_via_requests_html.py  meta_ai_requests.jsonl
(+10 files in other folders)
