[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muse-meta"
version = "0.2.0"
description = "A reverse proxy for Meta AI Muse Spark chat completion as an OpenAI-compatible endpoint."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Venkata Sai", email = "vskrch@example.com"},
]
keywords = ["fastapi", "reverse-proxy", "meta-ai", "muse", "openai", "chat-completion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
tools = [
    "playwright>=1.44.0",
    "playwright-stealth>=2.0.0",
    "requests-html>=0.10.0",
]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "mypy>=1.10.0",
]

[project.scripts]
muse-meta = "muse_meta.__main__:main"

[project.urls]
Homepage = "https://github.com/vskrch/Muse-meta"
Repository = "https://github.com/vskrch/Muse-meta.git"
Issues = "https://github.com/vskrch/Muse-meta/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at second line (conflicts with D212)
    "PLR0913", # Too many arguments (FastAPI handlers often need many params)
    "B008",  # FastAPI Depends() in defaults is idiomatic
    "ARG001", # FastAPI lifespan receives app even if unused
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["muse_meta"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
